--- a/blog/templates/blog_page.html
+++ b/blog/templates/blog_page.html
@@ -3,9 +3,9 @@
 	<h1>Blog Posts</h1>
 	{% for post in posts %}
 		<article>
-			<h1>{{ post.title }}</h1>
+			<h1 style="font-size:200%;">{{ post.title }}</h1>
 			<p>{{ post.summary }}</p>
-			<p>Posted on {{ post.posted }}</p>
+			<p style="font-size:90%;">Posted on {{ post.posted }}</p>
 		</article>
 	<!-- {{ post.content }}</p> -->
 	{% endfor %}
