--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -6,16 +6,17 @@
 			<fieldset class>
 				<legend>Admin Login</legend>
 				<div class="form_group">
+					<!--.py comment--->
+					<!--WTForms turns this bizzare chunk of text into an input field--->
+					<!--"form" variable passed in when creating the route in routes.py--->
 					{{ form.username.label(class="form-control-label") }}
-					{{ form.username(class="form-control form-control-lg") }}
+					{{ form.username(class="form-control") }}
 				</div>
 				<div class="form_group">
 					{{ form.password.label(class="form-control-label") }}
-					{{ form.password(class="form-control form-control-lg") }}
+					{{ form.password(class="form-control") }}
 				</div>
 			</fieldset>
-			<p> 
-			</p>
 			<div class="form_group">
 				{{ form.submit(class="btn") }}
 		</form>
