SQL post database implementation

--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
 {% block content %}
 	<h1>About</h1>
-	<p>I am a <a href="lambdaschool.com">Lambda School</a> grad specializing in databases, machine learning, and backend development.</p>
+	<p>I am a <a href="lambdaschool.com" style="color:blue;">Lambda School</a> grad specializing in databases, machine learning, and general backend development.</p>
 {% endblock content %}
