--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -5,7 +5,7 @@
 		<article>
 			<h1 style="font-size:200%;">{{ post.title }}</h1>
 			<p>{{ post.summary }}</p>
-			<p style="font-size:90%;">Posted on {{ post.posted }}</p>
+			<p style="font-size:90%;">Posted on {{ post.date_posted }}</p>
 		</article>
 	<!-- {{ post.content }}</p> -->
 	{% endfor %}
