--- a/blog/templates/blog_page.html
+++ b/blog/templates/blog_page.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
-	<h1>Blog Posts</h1>
+	<h1 class="header">Blog Posts</h1>
 	{% for post in posts %}
 		<article>
-			<h1 style="font-size:200%;">{{ post.title }}</h1>
+			<h1 class="subheader">{{ post.title }}</h1>
 			<p>{{ post.summary }}</p>
-			<p style="font-size:90%;">Posted on {{ post.posted }}</p>
+			<p class="content">Posted on {{ post.date_posted.date() }}</p>
 		</article>
 	<!-- {{ post.content }}</p> -->
 	{% endfor %}
