--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -20,7 +20,7 @@
 		display: table;
 		margin: 0;
 		padding: 0;
-		font-size: 20px;
+		font-size: 25px;
 		font-family: courier;
 	}
 	li {
@@ -28,17 +28,39 @@
 	}
 	li a {
 		display: block;
-		padding: 20px;
+		padding: 15px;
 		background-color: #b6b8cc;
 	}
 	a {
   		color: #12152e;
 	}
+	.footer {
+  		position: fixed;
+  		left: 0;
+  		bottom: 0;
+  		width: 100%;
+  		color: white;
+  		text-align: center;
+  	}
+  	.header {
+  		font-size:45px;
+  	}
+  	.subheader {
+		font-size:35px;
+  	}
+  	.content {
+  		font-size:19px;
+  		position:relative;
+  		top:-20px
+  	}
 </style>
 <main>
 	<div>
 		<center>
-			<ul>
+			<p style="font-family:courier;color:#12152e;font-size:50px">
+				Trey's Projects
+			</p>
+			<ul style="position:relative;top:-20px">
 				<li><a href="{{ url_for('home') }}">Home</a></li>
 				<li><a href="{{ url_for('blog') }}">Blog</a></li>
 				<li><a href="{{ url_for('about') }}">About</a></li>
@@ -54,6 +76,13 @@
 		<!-- Bootstrap -->
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<!-- /Bootstrap -->
+	</div>
+	<div class="footer">
+		<center>
+			<p style="font-family:courier;color:#12152e">
+				I log what you do here.
+			</p>
+		</center>
 	</div>
 </main>
 </html>
