Added splash text and persistent logins.

--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,5 +1,17 @@
 {% extends 'layout.html' %}
 {% block content %}
-	<h1>About</h1>
-	<p>I am a <a href="lambdaschool.com" style="color:blue;">Lambda School</a> grad specializing in databases, machine learning, and general backend development.</p>
+	<h1>>About</h1>
+	<p class="content", style="top:-10px">
+		I am a <a href="lambdaschool.com" style="color:blue;">Lambda School</a>
+		grad specializing in machine learning, databases, python, and backend
+		development and capable in software development and algorithms.
+	</p>
+	<p class="content", style="top:-10px">
+		Trey Heaney, Michigan <a style="color:grey;"><i># TODO: Complete address implementation.</i></a></br>
+		heaneytrey@gmail.com </br>
+		313-412-7042
+	</p>
+	<a href="" style="color:blue;font-size:27px">
+	My resume
+	</a>
 {% endblock content %}
