--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -4,7 +4,6 @@
 	<!-- Bootstrap -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!-- /Bootstrap -->
 	{% if title %}
@@ -14,11 +13,12 @@
 	{% endif %}
 </head>
 
+<!-- Eyesore --->
 <style>
 	ul {	
 		list-style-type: none;
 		display: table;
-		margin: 0;
+		margin: -10px;
 		padding: 0;
 		font-size: 25px;
 		font-family: courier;
@@ -29,10 +29,10 @@
 	li a {
 		display: block;
 		padding: 15px;
-		background-color: #b6b8cc;
+		background-color: #001bff;
 	}
 	a {
-  		color: #12152e;
+  		color: white;
 	}
 	.footer {
   		position: fixed;
@@ -43,33 +43,105 @@
   		text-align: center;
   	}
   	.header {
-  		font-size:45px;
+  		font-size: 45px;
   	}
   	.subheader {
-		font-size:35px;
+		font-size: 35px;
   	}
   	.content {
-  		font-size:19px;
-  		position:relative;
-  		top:-20px
+  		font-size: 19px;
+  		position: relative;
+  		top: -20px
   	}
+	a:link {
+		color: white;
+		text-decoration: none; 
+		font-weight: normal 
+	}
+	a:visited {
+		color: white;
+		text-decoration: none;
+		font-weight: normal
+	}
+	a:active {
+		color: white;
+		text-decoration: none
+	}
+	a:hover {
+		color: grey;
+		text-decoration: none;
+		font-weight: none
+	}
+    #status {
+		color: #FFFF00;
+		font-size: 1.5em;
+		font-family:'minecraftfont';
+		text-shadow:3px 3px #3F3F00;
+		padding: 0px;
+		position: absolute;
+	}
+	.pop {
+    animation: pop 0.7s infinite;
+    -webkit-animation: pop 0.58s infinite;
+	}
+	@keyframes pop {
+    from {
+        transform:scale(0.95)
+    }
+    50% {
+        transform:scale(1)
+    }
+    to {
+        transform:scale(0.95)
+    }
+	}
+	@-webkit-keyframes pop {
+    from {
+        -webkit-transform:scale(0.95)
+    }
+    50% {
+        -webkit-transform:scale(1)
+    }
+    to {
+        -webkit-transform:scale(0.95)
+    }
+	}
+	.tilt {
+    -ms-transform: rotate(-25deg);
+    -webkit-transform: rotate(-25deg);
+    transform: rotate(-25deg);
+	}
+	@font-face {
+    font-family:'minecraftfont';
+    src: url('http://design.d3x.co/demo/mcgeneric/font/minecraft_font.woff');
+}
+}
 </style>
+
 <main>
 	<div>
 		<center>
 			<p style="font-family:courier;color:#12152e;font-size:50px">
 				Trey's Projects
 			</p>
+			<!-- Copy and pasted from http://jsfiddle.net/LhXwj/2/ --->
+
 			<ul style="position:relative;top:-20px">
 				<li><a href="{{ url_for('home') }}">Home</a></li>
 				<li><a href="{{ url_for('blog') }}">Blog</a></li>
 				<li><a href="{{ url_for('about') }}">About</a></li>
 				<li><a href="{{ url_for('home') }}">Directory</a></li>
+				<div class="tilt" style="font-size:16px;position:relative;left:60%">
+					<div id="status" class="pop">
+						{{ splash }}
+					</div>
+				</div>
 			</ul>
 		</center>
+
 	</div>
 	<div>
-		<div class="container", style="font-family:courier;color:#12152e">
+		<div class="container", style="font-family:courier;color:#12152e;width:800px">
 			{% block content %}
 			{% endblock %}
 		</div>
@@ -86,4 +158,3 @@
 	</div>
 </main>
 </html>
-
