--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -2,9 +2,9 @@
 {% block content %}
 	<h1 class="header">Projects</h1>
 	{% for post in posts %}
-		<article>
-			<h1 class="subheader">> {{ post.title }}</h1>
-			<p class="text-secondary" style="position:relative;left:5%;bottom:18px;">Posted on {{ post.date_posted.date() }}</p>
+		<article class="subheader">
+			<a>></a><a class="inner" href="{{ url_for('post', post_id=post.id) }}" style="">{{ post.title }}</a>
+			<p style="position:relative;left:51px;bottom:10px;color:gray;font-size:20px">Posted on {{ post.date_posted.date() }}</p>
 		</article>
 	{% endfor %}
 {% endblock content %}
