--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -13,7 +13,6 @@
 	{% endif %}
 </head>
 
-<!-- Eyesore --->
 <style>
 	ul {	
 		list-style-type: none;
@@ -33,6 +32,7 @@
 	}
 	a {
   		color: white;
+  		padding: 10px;
 	}
 	.footer {
   		position: fixed;
@@ -51,24 +51,43 @@
   	.content {
   		font-size: 19px;
   		position: relative;
-  		top: -20px
+  		top: -20px;
   	}
-	a:link {
-		color: white;
-		text-decoration: none; 
-		font-weight: normal 
-	}
-	a:visited {
+	a.head:link {
 		color: white;
 		text-decoration: none;
 		font-weight: normal
 	}
-	a:active {
+	a.head:visited {
+		color: white;
+		text-decoration: none;
+		font-weight: normal
+	}
+	a.head:active {
 		color: white;
 		text-decoration: none
 	}
-	a:hover {
+	a.head:hover {
 		color: grey;
+		text-decoration: none;
+		font-weight: none
+	}
+	a.inner:link {
+		color: black;
+		text-decoration: none;
+		font-weight: normal
+	}
+	a.inner:visited {
+		color: grey;
+		text-decoration: none;
+		font-weight: normal
+	}
+	a.inner:active {
+		color: blue;
+		text-decoration: none
+	}
+	a.inner:hover {
+		color: blue;
 		text-decoration: none;
 		font-weight: none
 	}
@@ -81,8 +100,8 @@
 		position: absolute;
 	}
 	.pop {
-    animation: pop 0.7s infinite;
-    -webkit-animation: pop 0.58s infinite;
+		animation: pop 0.7s infinite;
+		-webkit-animation: pop 0.58s infinite;
 	}
 	@keyframes pop {
     from {
@@ -107,13 +126,13 @@
     }
 	}
 	.tilt {
-    -ms-transform: rotate(-25deg);
-    -webkit-transform: rotate(-25deg);
-    transform: rotate(-25deg);
+		-ms-transform: rotate(-25deg);
+		-webkit-transform: rotate(-25deg);
+		transform: rotate(-25deg);
 	}
 	@font-face {
-    font-family:'minecraftfont';
-    src: url('http://design.d3x.co/demo/mcgeneric/font/minecraft_font.woff');
+		font-family:'minecraftfont';
+		src: url('http://design.d3x.co/demo/mcgeneric/font/minecraft_font.woff');
 }
 }
 </style>
@@ -125,10 +144,10 @@
 				Trey's Projects
 			</p>
 			<ul style="position:relative;top:-20px">
-				<li><a href="{{ url_for('home') }}">Home</a></li>
-				<li><a href="{{ url_for('blog') }}">Blog</a></li>
-				<li><a href="{{ url_for('about') }}">About</a></li>
-				<li><a href="{{ url_for('home') }}">Directory</a></li>
+				<li><a href="{{ url_for('home') }}" class="head">Home</a></li>
+				<li><a href="{{ url_for('blog') }}" class="head">Blog</a></li>
+				<li><a href="{{ url_for('about') }}" class="head">About</a></li>
+				<li><a href="{{ url_for('home') }}" class="head">Directory</a></li>
 				<!-- Copy and pasted from http://jsfiddle.net/LhXwj/2/ --->
 				<div class="tilt" style="font-size:16px;position:relative;left:60%">
 					<div id="status" class="pop">
