--- a/blog/templates/newpost.html
+++ b/blog/templates/newpost.html
@@ -5,7 +5,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset>
-            <legend>New Post</legend>
+            <legend>{{ title }}</legend>
             <div>
                 {{ form.title.label(class="form-control-label") }}
                 {{ form.title(class="form-control form-control-lg") }}
