Implemented markdown parsing for posts, static post storage, and post updating/deleting.

--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,17 +1,27 @@
 {% extends 'layout.html' %}
 {% block content %}
-	<h1>>About</h1>
+	<h1>> About</h1>
 	<p class="content", style="top:-10px">
 		I am a <a href="lambdaschool.com" style="color:blue;">Lambda School</a>
 		grad specializing in machine learning, databases, python, and backend
-		development and capable in software development and algorithms.
+		development and capable in software development and algorithms. I'm
+		open to any job if I get to program.
 	</p>
 	<p class="content", style="top:-10px">
 		Trey Heaney, Michigan <a style="color:grey;"><i># TODO: Complete address implementation.</i></a></br>
 		heaneytrey@gmail.com </br>
 		313-412-7042
 	</p>
-	<a href="" style="color:blue;font-size:27px">
-	My resume
-	</a>
+	<center>
+		<a href="" style="color:blue;font-size:27px">
+			Resume
+		</a>
+	</center>
+	<center>
+		<ul>
+			<li><a href="https://github.com/TreyHeaney/" style="background-color:white;color:blue">Github</a></li>
+			<li><a href="https://www.linkedin.com/in/treyhe/" style="background-color:white;color:blue">Linkedin</a></li>
+			<li><a href="mailto:heaneytrey@gmail.com" style="background-color:white;color:blue">Email</a></li>
+		</ul>
+	</center>
 {% endblock content %}
