--- a/blog/templates/blog_page.html
+++ b/blog/templates/blog_page.html
@@ -1,12 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1 class="header">Blog Posts</h1>
+	<h1 class="header">Blogs</h1>
 	{% for post in posts %}
-		<article>
-			<h1 class="subheader">> {{ post.title }}</h1>
-			<p>{{ post.summary }}</p>
-			<p class="content">Posted on {{ post.date_posted.date() }}</p>
+		<article class="subheader">
+			<a>></a><a class="inner" href="{{ url_for('post', post_id=post.id) }}" style="">{{ post.title }}</a>
+			<p style="position:relative;left:51px;bottom:10px;color:gray;font-size:20px">Posted on {{ post.date_posted.date() }}</p>
 		</article>
-	<!-- {{ post.content }}</p> -->
 	{% endfor %}
 {% endblock content %}
