--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<!-- Warning, it's all terrible. -->
 <head>
 	<!-- Bootstrap -->
     <meta charset="utf-8">
@@ -133,8 +134,20 @@
 	@font-face {
 		font-family:'minecraftfont';
 		src: url('http://design.d3x.co/demo/mcgeneric/font/minecraft_font.woff');
-}
-}
+	}
+	}
+	#page-container {
+	  position: relative;
+	  min-height: 100vh;
+	}
+
+
+	#footer {
+	  position: absolute;
+	  bottom: 0;
+	  width: 100%;
+	  height: 2.5rem;
+	}
 </style>
 
 <main>
@@ -167,12 +180,19 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<!-- /Bootstrap -->
 	</div>
-	<div class="footer">
+	<footer id="footer">
+		<center>
+			<ul>
+				<li><a href="https://github.com/TreyHeaney/" style="background-color:white;color:blue">Github</a></li>
+				<li><a href="https://www.linkedin.com/in/treyhe/" style="background-color:white;color:blue">Linkedin</a></li>
+				<li><a href="mailto:heaneytrey@gmail.com" style="background-color:white;color:blue">Email</a></li>
+			</ul>
+		</center>
 		<center>
 			<p style="font-family:courier;color:#12152e">
 				I log what you do here.
 			</p>
 		</center>
-	</div>
+	</footer>
 </main>
 </html>
