--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -4,8 +4,10 @@
     <article>
         <h1 class="header">> {{ post.title }}</h1>
         <p class="content" style="position:relative;left:54px;bottom:18px;">Posted on {{ post.date_posted.date() }}</p>
-        <br></br>
-        <p class="content" style="position:relative;left:54px;bottom:18px;">{{ post.content }}</p>
-
+        <div style="font-size:130%">
+            {% filter markdown %}
+            {{ content[8:] }}
+            {% endfilter %}
+        </div>
     </article>
 {% endblock content %}
