--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
-	<h1>> About</h1>
-	<p class="content", style="top:-10px">
-		I am a <a href="lambdaschool.com" style="color:blue;">Lambda School</a>
+	<h1># About</h1>
+	<p class="content", style="top:-10px;font-size:130%">
+		I am a <a href="https://lambdaschool.com/" style="color:blue;">Lambda School</a>
 		grad specializing in machine learning, databases, python, and backend
 		development and capable in software development and algorithms. I'm
-		open to any job if I get to program.
+		open to any work if I get to program.
 	</p>
 	<p class="content", style="top:-10px">
 		Trey Heaney, Michigan <a style="color:grey;"><i># TODO: Complete address implementation.</i></a></br>
