--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -54,6 +54,25 @@
   		position: relative;
   		top: -20px;
   	}
+  	a:link {
+		color: blue;
+		text-decoration: none;
+		font-weight: normal
+	}
+	a:visited {
+		color: blue;
+		text-decoration: none;
+		font-weight: normal
+	}
+	a:active {
+		color: blue;
+		text-decoration: none
+	}
+	a:hover {
+		color: blue;
+		text-decoration: none;
+		font-weight: none
+	}
 	a.head:link {
 		color: white;
 		text-decoration: none;
@@ -79,7 +98,7 @@
 		font-weight: normal
 	}
 	a.inner:visited {
-		color: grey;
+		color: black;
 		text-decoration: none;
 		font-weight: normal
 	}
