--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -2,9 +2,9 @@
 {% block content %}
     <br></br>
     <article>
-        <h1 class="header">> {{ post.title }}</h1>
+        <h1 class="header", style="white-space: nowrap; "># {{ post.title }}</h1>
         <p class="content" style="position:relative;left:54px;bottom:18px;">Posted on {{ post.date_posted.date() }}</p>
-        <div style="font-size:130%">
+        <div style="font-size:130%;a.head:link:blue">
             {% filter markdown %}
             {{ content[8:] }}
             {% endfilter %}
