--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,10 +1,9 @@
 {% extends 'layout.html' %}
 {% block content %}
-	<h1># About</h1>
+	<h1 class="header">About</h1>
 	<p class="content", style="top:-10px;font-size:130%">
 		I am a <a href="https://lambdaschool.com/" style="color:blue;">Lambda School</a>
-		grad specializing in machine learning, databases, python, and backend
-		development and capable in software development and algorithms. I'm
+		grad specializing in python data science and capable in Java/JS development. I'm
 		open to any work if I get to program.
 	</p>
 	<p class="content", style="top:-10px">
